# chip8_emu

./: .clang-format  .clang-tidy  .justfile  CMakeLists.txt  disassembler.cpp  displayer.cpp  emulator.cpp
app/disassembler/: disassembler.cpp
app/emulator/: emulator.cpp
cmake/: googletest.cmake  libfmt.cmake  sdl.cmake  sfml.cmake
include/: chip8.h  cpu.h  cpu_instruction.h  cpu_memory.h  cpu_specs.h  errcodes.h
include/display/: base_display.h  sfml_display.h
include/logger/: base_logger.h  console_logger.h
lib/: CMakeLists.txt
lib/cpu/: CMakeLists.txt  cpu.cpp  cpu_instruction.cpp  cpu_memory.cpp
lib/cpu/include/: cpu.h  cpu_instruction.h  cpu_memory.h  cpu_specs.h  errcodes.h
lib/display/: sfml_display.cpp
lib/display/include/: base_display.h  sfml_display.h
lib/logger/: CMakeLists.txt  base_logger.cpp  console_logger.cpp
lib/logger/include/: base_logger.h  console_logger.h
source/: CMakeLists.txt  chip8.cpp  cpu.cpp  cpu_instruction.cpp  cpu_memory.cpp
source/display/: sfml_display.cpp
source/logger/: base_logger.cpp  console_logger.cpp
test/: CMakeLists.txt  main.cpp
test/suites/CPU/: cpu_test.cpp
test/suites/cpu/: cpu_test.cpp
test/suites/logger/: logger_test.cpp
